# pcce-wavelets

./: .gitignore  pyproject.toml
scripts/: scaleogram_test.ipynb  scaleogram_teste_nino3.ipynb  wavelets_and_PSD-vento.ipynb  wavelets_and_PSD.ipynb  wavelets_cross_spectrum.py  wavelets_teste-2.py  wind-and-currents-wavelets-cross-spectrum.ipynb
scripts/.ipynb_checkpoints/: scaleogram_test-checkpoint.ipynb  wavelets_and_PSD-checkpoint.ipynb
src/: butter_filter.py
